started adding in OASA

--- a/Methods/IUF/iuf_testing.ipynb
+++ b/Methods/IUF/iuf_testing.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T15:03:37.291555Z",
-     "start_time": "2025-06-11T15:03:35.289081Z"
+     "end_time": "2025-06-12T16:01:29.839877Z",
+     "start_time": "2025-06-12T16:01:27.802847Z"
     }
    },
    "cell_type": "code",
@@ -31,7 +31,8 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from Methods.IUF.ViT import MultiHeadSelfAttention, ViTBlock, ViT\n",
-    "from Methods.IUF.utils.discriminator import Discriminator"
+    "from Methods.IUF.utils.discriminator import Discriminator\n",
+    "from Methods.IUF.utils.encoder import Encoder"
    ],
    "id": "d72cdfd011c9690b",
    "outputs": [],
@@ -40,15 +41,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T15:03:39.546387Z",
-     "start_time": "2025-06-11T15:03:37.815563Z"
+     "end_time": "2025-06-12T16:01:31.621102Z",
+     "start_time": "2025-06-12T16:01:29.942349Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "vt = Discriminator()\n",
+    "# Starting to put together an IUF pipeline for testing\n",
+    "class IUF(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.discriminator = Discriminator()\n",
+    "\n",
+    "        self.encoder = Encoder()\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        # List of length num_layers,\n",
+    "        # where each item is a tensor of size (B x L x E)\n",
+    "        oasa_features = self.discriminator(x, return_features=True)\n",
+    "\n",
+    "        latent_features = self.encoder(x, oasa_features)\n",
+    "\n",
+    "        return oasa_features\n",
+    "\n",
+    "iuf = IUF()\n",
     "dummy = torch.rand(8, 3, 224, 224)\n",
-    "out = vt(dummy)"
+    "out = iuf(dummy)"
    ],
    "id": "1acfb805f3b2f740",
    "outputs": [],
@@ -57,49 +79,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-11T15:03:40.141746Z",
-     "start_time": "2025-06-11T15:03:40.136710Z"
+     "end_time": "2025-06-12T16:02:14.503549Z",
+     "start_time": "2025-06-12T16:02:14.500349Z"
     }
    },
    "cell_type": "code",
-   "source": "out[0].detach().numpy()",
+   "source": "out[0].shape",
    "id": "71a4199ecdbad2b7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.07836362, 0.08676462, 0.07668877, 0.08307239, 0.09868931,\n",
-       "        0.0542396 , 0.07430747, 0.10606543, 0.08609241, 0.0982074 ,\n",
-       "        0.061308  , 0.09620103],\n",
-       "       [0.07406266, 0.0836736 , 0.07552233, 0.08219466, 0.08844579,\n",
-       "        0.06839662, 0.07061043, 0.11601701, 0.08648423, 0.11906297,\n",
-       "        0.05939075, 0.07613888],\n",
-       "       [0.07797493, 0.08565109, 0.08524148, 0.08349221, 0.08942299,\n",
-       "        0.05774301, 0.07452003, 0.12010112, 0.08145637, 0.10456853,\n",
-       "        0.05425137, 0.08557696],\n",
-       "       [0.07512388, 0.07757302, 0.07695831, 0.09436318, 0.09606331,\n",
-       "        0.06279685, 0.07609739, 0.1050284 , 0.07716016, 0.10100695,\n",
-       "        0.06035652, 0.09747207],\n",
-       "       [0.08232392, 0.07259124, 0.07080487, 0.08638152, 0.10194635,\n",
-       "        0.06018919, 0.06923473, 0.1119076 , 0.08445992, 0.1116529 ,\n",
-       "        0.06102447, 0.08748328],\n",
-       "       [0.07027172, 0.08163323, 0.08983587, 0.08131117, 0.09678767,\n",
-       "        0.06587564, 0.08217293, 0.12186016, 0.07535907, 0.09478995,\n",
-       "        0.0551501 , 0.08495247],\n",
-       "       [0.07985274, 0.09406173, 0.08421998, 0.07401413, 0.0972398 ,\n",
-       "        0.07093838, 0.06809235, 0.09870318, 0.08314109, 0.10198345,\n",
-       "        0.05954238, 0.08821075],\n",
-       "       [0.07696267, 0.08032174, 0.08011682, 0.08356911, 0.09342502,\n",
-       "        0.06166014, 0.07945558, 0.10214924, 0.08460584, 0.10223921,\n",
-       "        0.06165074, 0.09384397]], dtype=float32)"
+       "torch.Size([8, 196, 64])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {
