updates to eval code
planning to use eval_one_epoch to get specific model outputs and then perform eval metrics from there with different functions

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -137,8 +137,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T15:06:36.360399Z",
-     "start_time": "2025-07-01T15:06:31.540239Z"
+     "end_time": "2025-07-07T15:53:27.678167Z",
+     "start_time": "2025-07-07T15:53:22.054341Z"
     }
    },
    "cell_type": "code",
@@ -153,7 +153,7 @@
     "iuf = IUF_Model()\n",
     "test_dataset = datasets.mvtec(train=False, task='bottle', unsupervised=False)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=24, shuffle=True, collate_fn=datasets.collate)\n",
-    "iuf.eval_one_epoch(test_dataloader)"
+    "out = iuf.eval_one_epoch(test_dataloader)"
    ],
    "id": "92dea9adf76ac69d",
    "outputs": [
@@ -161,23 +161,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cuda device\n",
-      "0.5434677600860596 -0.003172624623402953\n",
-      "torch.Size([24, 3, 224, 224])\n"
+      "Using cuda device\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([], [])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-07T15:58:12.567287Z",
+     "start_time": "2025-07-07T15:58:12.551709Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for item in out[0]:\n",
+    "    print(item.mean())"
+   ],
+   "id": "112e801acc282839",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0070)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0070)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0070)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0070)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0070)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0067)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0068)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0070)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0069)\n",
+      "tensor(-0.0069)\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
