--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -32,7 +32,12 @@
    "id": "86a85e95d262040c"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-08T13:16:42.451232Z",
+     "start_time": "2025-07-08T13:16:36.554788Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from Methods.IUF.iuf import IUF_Model\n",
@@ -131,37 +136,13 @@
     "                                   )"
    ],
    "id": "a850d1c85d6a2bfe",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-07T15:53:27.678167Z",
-     "start_time": "2025-07-07T15:53:22.054341Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from Methods.IUF.iuf import IUF_Model\n",
-    "from utils.train import train_model\n",
-    "import datasets\n",
-    "from utils.eval import eval_model\n",
-    "import torch\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "iuf = IUF_Model()\n",
-    "test_dataset = datasets.mvtec(train=False, task='bottle', unsupervised=False)\n",
-    "test_dataloader = DataLoader(test_dataset, batch_size=24, shuffle=True, collate_fn=datasets.collate)\n",
-    "out = iuf.eval_one_epoch(test_dataloader)"
-   ],
-   "id": "92dea9adf76ac69d",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cuda device\n"
+      "{'color': [[0.2, 0.26], [0.26, 0.32], [0.32, 0.38], [0.38, 0.44], [0.44, 0.5], [0.5, 0.56], [0.56, 0.62], [0.62, 0.68], [0.68, 0.74], [0.74, 0.8]], 'blur': [[1, 0.5], [3, 1], [5, 1.5], [7, 2], [9, 2.5], [11, 3], [13, 3.5], [15, 4], [17, 4.5], [19, 5]], 'geometric': [[4, 2, 0.02, 4], [8, 4, 0.04, 8], [12, 6, 0.06, 12], [16, 8, 0.08, 16], [20, 10, 0.1, 20], [24, 12, 0.12, 24], [28, 14, 0.14, 28], [32, 16, 0.16, 32], [36, 18, 0.18, 36], [40, 20, 0.2, 40]]}\n",
+      "{'color': [[0.2, 0.26], [0.26, 0.32], [0.32, 0.38], [0.38, 0.44], [0.44, 0.5], [0.5, 0.56], [0.56, 0.62], [0.62, 0.68], [0.68, 0.74], [0.74, 0.8]], 'blur': [[1, 0.5], [3, 1], [5, 1.5], [7, 2], [9, 2.5], [11, 3], [13, 3.5], [15, 4], [17, 4.5], [19, 5]], 'geometric': [[4, 2, 0.02, 4], [8, 4, 0.04, 8], [12, 6, 0.06, 12], [16, 8, 0.08, 16], [20, 10, 0.1, 20], [24, 12, 0.12, 24], [28, 14, 0.14, 28], [32, 16, 0.16, 32], [36, 18, 0.18, 36], [40, 20, 0.2, 40]]}\n"
      ]
     }
    ],
@@ -170,94 +151,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T15:58:12.567287Z",
-     "start_time": "2025-07-07T15:58:12.551709Z"
+     "end_time": "2025-07-08T14:27:30.312233Z",
+     "start_time": "2025-07-08T14:27:30.307089Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "for item in out[0]:\n",
-    "    print(item.mean())"
+    "import os\n",
+    "os.listdir(\"results\")"
    ],
    "id": "112e801acc282839",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0070)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0070)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0070)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0070)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0070)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0067)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0068)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0070)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0069)\n",
-      "tensor(-0.0069)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {},
