updates for first eval test

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -49,7 +49,7 @@
     "EVAL = True\n",
     "models = {\n",
     "    \"DNE\":True,\n",
-    "    \"IUF\":False,\n",
+    "    \"IUF\":True,\n",
     "    \"UCAD\":False\n",
     "}\n",
     "datasets = {\n",
@@ -114,7 +114,7 @@
     "                            criterion=torch.nn.CrossEntropyLoss(),\n",
     "                            learning_rate=LEARNING_RATE\n",
     "                            )\n",
-    "            elif datasets['MTD']:\n",
+    "            if datasets['MTD']:\n",
     "                for distortion in data_aug.keys():\n",
     "                    train_model(model_type=model,\n",
     "                                dataset='MTD',\n",
@@ -130,139 +130,36 @@
     "if EVAL:\n",
     "    for model in models.keys():\n",
     "        if models[model]:\n",
-    "            out = eval_model(model_type=model,\n",
-    "                               batch_size=BATCH_SIZE,\n",
-    "                               data_aug=data_aug,\n",
-    "                                metrics=EVAL_METRICS\n",
-    "                               )"
+    "            for dataset in datasets.keys():\n",
+    "                if datasets[dataset]:\n",
+    "                    out = eval_model(model_type=model,\n",
+    "                                     batch_size=BATCH_SIZE,\n",
+    "                                     data_aug=data_aug,\n",
+    "                                     dataset=dataset,\n",
+    "                                     metrics=EVAL_METRICS\n",
+    "                                     )"
    ],
    "id": "a850d1c85d6a2bfe",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing DNE-MTD-Unsupervised\n",
+      "Testing IUF-MTD-Supervised\n",
       "--------------------\n",
-      "Current Task: ('color', [0.2, 0.26])\n"
+      "Current Task: ('geometric', [40, 20, 0.2, 40])\n"
      ]
     }
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-10T16:14:20.352364Z",
-     "start_time": "2025-07-10T16:14:20.349460Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "preds, labels = out",
-   "id": "112e801acc282839",
-   "outputs": [],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-10T16:16:07.656406Z",
-     "start_time": "2025-07-10T16:16:07.652407Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "((preds==1)*(labels==1)).sum() / ((labels==1).sum())",
-   "id": "7cc6e6f4673ab468",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-10T16:06:46.977807Z",
-     "start_time": "2025-07-10T16:06:46.972506Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "out",
+   "source": "",
    "id": "7c5598ca2e1c276e",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "    color_02_026 color_026_032 color_032_038 color_038_044 color_044_05  \\\n",
-       "DNE            2           NaN           NaN           NaN          NaN   \n",
-       "\n",
-       "    color_05_056 color_056_062 color_062_068 color_068_074 color_074_08  \n",
-       "DNE          NaN           NaN           NaN           NaN          NaN  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>color_02_026</th>\n",
-       "      <th>color_026_032</th>\n",
-       "      <th>color_032_038</th>\n",
-       "      <th>color_038_044</th>\n",
-       "      <th>color_044_05</th>\n",
-       "      <th>color_05_056</th>\n",
-       "      <th>color_056_062</th>\n",
-       "      <th>color_062_068</th>\n",
-       "      <th>color_068_074</th>\n",
-       "      <th>color_074_08</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>DNE</th>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 16
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
